--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
-apply plugin: 'com.google.gms.google-services'
+//apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 29
@@ -69,5 +69,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     //firebase
-    implementation 'com.google.firebase:firebase-analytics:17.2.2'
+//    implementation 'com.google.firebase:firebase-analytics:17.2.2'
+
+    //admob
+//    implementation 'com.google.android.gms:play-services-ads:19.0.1'
 }
