change package name

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,14 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
-//apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "com.xixiaohui.myweather.globalweather"
-        minSdkVersion 21
+        applicationId "com.heweather.owp"
+        minSdkVersion 16
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -17,81 +16,28 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
-    viewBinding{
-        enabled = true
-    }
-
-    dataBinding{
-        enabled = true
-    }
-
-    signingConfigs {
-        gw {
-            keyAlias "globalweather"
-            keyPassword "ivy,123"
-            storeFile rootProject.file("gw.jks")
-            storePassword "ivy,123"
-        }
-    }
-
     buildTypes {
-        debug {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-
-// To inline the bytecode built with JVM target 1.8 into
-// bytecode that is being built with JVM target 1.6. (e.g. navArgs)
-
-
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    kotlinOptions {
-        jvmTarget = "1.8"
-    }
-
-    sourceSets{
-        main {
-            jniLibs.srcDirs = ['libs']
-        }
-        debug.setRoot('build-types/debug')
-        release.setRoot('build-types/release')
-    }
-
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.2.0'
-    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.2.1'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.2.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
-    //firebase
-//    implementation 'com.google.firebase:firebase-analytics:17.2.2'
-
-    //admob
-//    implementation 'com.google.android.gms:play-services-ads:19.0.1'
     implementation 'com.google.code.gson:gson:2.8.0'
     implementation 'com.squareup.okhttp3:okhttp:3.9.0'
-    implementation files('libs/HeWeather_Android_Common_V3.3.jar')
-    
-    api files('libs/log4j-1.2.17.jar')
+
+    implementation files('libs/log4j-1.2.17.jar')
+    implementation files('libs/HeWeather_Android_Common_V3.2.jar')
     implementation files('libs/AMap_Location_V4.0.1_20180426.jar')
-
-
 }
