test heweather api

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,8 +52,8 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.0'
     implementation 'com.squareup.okhttp3:okhttp:3.9.0'
 
-    implementation files('libs/log4j-1.2.17.jar')
-    implementation files('libs/HeWeather_Android_Common_V3.2.jar')
+//    implementation files('libs/log4j-1.2.17.jar')
+//    implementation files('libs/HeWeather_Android_Common_V3.3.jar')
 //    implementation files('libs/AMap_Location_V4.0.1_20180426.jar')
-    implementation files('libs/AMap_Location_V4.7.1_20190803.jar')
+//    implementation files('libs/AMap_Location_V4.7.1_20190803.jar')
 }
