--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,13 @@ android {
             storePassword "ivy,123"
         }
     }
+    viewBinding {
+        enabled = true
+    }
 
+    dataBinding {
+        enabled = true
+    }
 
     buildTypes {
         release {
@@ -51,6 +57,7 @@ dependencies {
 
     implementation 'com.google.code.gson:gson:2.8.0'
     implementation 'com.squareup.okhttp3:okhttp:3.9.0'
+    implementation 'com.zhy:okhttputils:2.6.2'
 
 //    implementation files('libs/log4j-1.2.17.jar')
 //    implementation files('libs/HeWeather_Android_Common_V3.3.jar')
