add admob native ads

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,7 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
     signingConfigs {
         he {
@@ -64,5 +65,11 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
 
+    //admob
+    implementation 'com.google.android.gms:play-services-ads:19.1.0'
+
+
+    implementation 'androidx.multidex:multidex:2.0.1'
+    implementation project(':nativetemplates')
 
 }
