--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     package="com.xixiaohui.weather">
     <!-- 和风需求权限 -->
     <uses-permission android:name="android.permission.INTERNET" />
-<!--    <uses-permission android:name="android.permission.READ_PHONE_STATE" />-->
+    <!--    <uses-permission android:name="android.permission.READ_PHONE_STATE" />-->
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" /> <!-- 用于进行网络定位 -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" /> <!-- 用于访问GPS定位 -->
@@ -12,10 +12,14 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" /> <!-- 用于获取wifi的获取权限，wifi信息会用来进行网络定位 -->
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" /> <!-- 用于访问网络，网络定位需要上网 -->
 
-<!--    <uses-permission android:name="android.permission.READ_PHONE_STATE" /> &lt;!&ndash; 用于写入缓存数据到扩展存储卡 &ndash;&gt;-->
+    <!--    <uses-permission android:name="android.permission.READ_PHONE_STATE" /> &lt;!&ndash; 用于写入缓存数据到扩展存储卡 &ndash;&gt;-->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" /> <!-- 用于申请调用A-GPS模块 -->
     <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
-    <uses-permission android:name="android.permission.WRITE_SECURE_SETTINGS"
+    <uses-permission
+        android:name="android.permission.WRITE_SECURE_SETTINGS"
+        tools:ignore="ProtectedPermissions" />
+    <uses-permission
+        android:name="android.permission.CHANGE_CONFIGURATION"
         tools:ignore="ProtectedPermissions" />
 
     <application
@@ -45,7 +49,9 @@
         </activity>
 
         <activity android:name=".view.activity.SettingActivity" />
-        <activity android:name=".view.activity.DiscoverActivity" android:theme="@style/DiscoverTheme"/>
+        <activity
+            android:name=".view.activity.DiscoverActivity"
+            android:theme="@style/DiscoverTheme" />
 
         <activity android:name=".view.activity.MainActivity">
 
